Fixed loader not showing on first click

--- a/app/globals.css
+++ b/app/globals.css
@@ -46,6 +46,7 @@ p {
   width: 100%;
   height: 100%;
   position: absolute;
+  opacity: 1;
 }
 
 .title {
@@ -148,6 +149,11 @@ p {
 /*PHONE*/
 @media screen and (max-width: 699px) {
 
+  .loading {
+    width: 68.5%;
+    height: 50%;
+  }
+
   .wrapper {
     padding: 40px 15px;
   }
@@ -194,7 +200,6 @@ p {
   }
 
   p {
-      font-family: var(--studio-font);
       font-size: 0.65rem;
   }
 
